2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/production-wizard.glade:
	* data/glade/select-producers-wizard.glade:
	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/videotest/videotest.xml:
	  Use producer, not source.

2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/Makefile.am:
	  Add a missing glade file.

2008-07-22  Johan Dahlin  <johan@gnome.org>

	* data/glade/summary-wizard.glade:
	it should be Finish instead of Apply.

2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/configure/uninstalled.py.in:
	  Find writable build dir by looking at srcdir, not cwd.
	  Fixes distcheck for depending projects.

2008-07-22  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/common/i18n.py:
	Return untranslated singular strings with or
	without arguments.

2008-07-22  Pedro Gracia  <pedro@flumotion>

	* flumotion/common/i18n.py:
	* flumotion/common/netutils.py:
	Reverting r7049. Cause: moap cl ci with no prep before.

2008-07-22  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	* flumotion/common/pygobject.py:
	Remove with_construct_properties and the last remaining callsite

2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Add gettext as buildrequires because intltool doesn't pull it in.

2008-07-21  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/common/i18n.py:
	* flumotion/test/test_i18n.py:
	Return untranslated strings (singular and plural) 
	with or without arguments ok.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	added the multilanguage label.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	removed the multilanguage label.

2008-07-21  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/vfs.py:
	* flumotion/test/test_common_vfs.py: