@@ -285,7 +285,7 @@ class TestWizardSave(testsuite.TestCase):
              '      <property name="fluendo-logo">True</property>\n'
              '      <property name="height">480</property>\n'
              '      <property name="show-text">True</property>\n'
-             '      <property name="text">Fluendo</property>\n'
+             '      <property name="text">Flumotion</property>\n'
              '      <property name="width">640</property>\n'
              '    </component>\n'
              '    <component name="encoder-audio"\n'
@@ -509,7 +509,7 @@ class TestWizardSave(testsuite.TestCase):
              '      <property name="fluendo-logo">True</property>\n'
              '      <property name="height">240</property>\n'
              '      <property name="show-text">True</property>\n'
-             '      <property name="text">Fluendo</property>\n'
+             '      <property name="text">Flumotion</property>\n'
              '      <property name="width">320</property>\n'
              '      <property name="xiph-logo">True</property>\n'
              '    </component>\n'
@@ -727,7 +727,7 @@ class TestWizardSave(testsuite.TestCase):
              '      <property name="fluendo-logo">True</property>\n'
              '      <property name="height">480</property>\n'
              '      <property name="show-text">True</property>\n'
-             '      <property name="text">Fluendo</property>\n'
+             '      <property name="text">Flumotion</property>\n'
              '      <property name="width">640</property>\n'
              '    </component>\n'
              '    <component name="encoder-audio"\n'
@@ -864,7 +864,7 @@ class TestWizardSave(testsuite.TestCase):
              '      <property name="fluendo-logo">True</property>\n'
              '      <property name="height">480</property>\n'
              '      <property name="show-text">True</property>\n'
-             '      <property name="text">Fluendo</property>\n'
+             '      <property name="text">Flumotion</property>\n'
              '      <property name="width">640</property>\n'
              '    </component>\n'
              '    <component name="encoder-audio"\n'
